--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ label {
 }
 form {
     margin: 0 auto;
-    align-self: center;
-    align-items: center;
+    border: 1px solid black;
     width: fit-content;
     line-height: 40px;
     vertical-align: middle;
     text-align: center;
+    padding: 10px;
 }
 h2 {
     text-align: center;
